fixed scaling on smaller screens

--- a/src/views/Home/components/PrizeTracks/PrizeTracks.scss
+++ b/src/views/Home/components/PrizeTracks/PrizeTracks.scss
@@ -35,8 +35,8 @@
     align-items: center;
     &__container {
       margin: 40px 50px;
-      width: 341px;
-      height: 341px;
+      width: 20vw;
+      height: 20vw;
       min-width: 260px;
       min-height: 260px;
       border-radius: 50%;
